<resources>
    <string name="app_name">FasterWho</string>
    <string name="registrarse_label">Registrarse</string>
    <string name="entrar_label">Entrar</string>
    <string name="entrar_con_google">Entrar con Google</string>
    <string name="password_label">¿Has olvidado la contraseña?</string>
    <string name="button_aceptar">aceptar</string>
    <string name="button_cancelar">cancelar</string>
    <string name="title_faster_who">Faster Who</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nivel_de_dificultad">Nivel de dificultad</string>
    <string name="near_loc_prompt">Cerca de mi ubicación</string>
    <string-array name="filter_near_loc">
        <item>Cerca de mi ubicación</item>
        <item>1 km</item>
        <item>3 km</item>
        <item>5 km</item>
        <item>10 km</item>
    </string-array>
    <string name="ranking1">Ranking 1</string>
    <string name="ranking2">Ranking 2</string>
    <string name="ranking3">Ranking 3</string>
    <string name="add">Add</string>
    <string name="scan_qr">Escanear QR</string>
    <string name="filter">Filtros</string>
    <string name="friends">Mis Amigos</string>
    <string name="add_friend">Añadir amig@</string>
    <string name="title_activity_mis_rutas">mis_rutas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_mis_amigos">MisAmigos</string>

    <string name="button_route">Iniciar ruta</string>
    <string name="location">Ubicación</string>
    <string name="directions">Direcciones</string>
    <string name="route_title">Destino</string>
    <string name="route_subtitle">Dirección ruta destino</string>
    <string name="search_bar_location">Tu ubicación</string>
    <string name="location_button">Buscar</string>
    <string name="button_route_end">Finalizar ruta</string>
    <string name="clock_counter">00:06:37</string>
    <string name="meters_count">0 metros</string>
    <string name="route_name">Nombre de la ruta</string>
    <string name="direction_route">Dirección de la ruta</string>
    <string name="cancel_button">Cancelar</string>
    <string name="accept_button">Aceptar</string>
    <string name="add_image">Añadir imagen</string>
    <string name="title_activity_navigation">navigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings">Settings</string>
    <string name="puntuacion">Puntuación</string>
    <string name="distancia">Distancia</string>
    <string name="distancia_media">Distancia media</string>
    <string name="preference_filtersActivity_key">FiltersActivity</string>
    <string name="imagen_de_usuario">Imagen de usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="informacion_del_usuario">Información del usuario</string>
    <string name="sexo">Sexo:</string>
    <string name="peso">Peso:</string>
    <string name="estatura">Estatura:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="ultimas_estadisticas">Últimas estadísticas</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="activo">Activo</string>
    <string name="nivel_de_actividad">Nivel de actividad</string>
    <string name="_12_5_km">12,5 km</string>
    <string name="peso2">Peso</string>
    <string name="estatura2">Estatura</string>
    <string name="sexo2">Sexo</string>
    <string name="nombre">Nombre</string>
    <string name="estatura_cm">Estatura (cm)</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="fecha_de_nacimiento2">Fecha de nacimiento</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="guardar">Guardar</string>
    <string name="logo">Logo</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Email</string>
    <string name="sin_resultados">Sin resultados.</string>
    <string name="limpiar">Limpiar</string>
    <string name="_0km">0km</string>
    <string name="_30km">30km</string>
    <string name="_60km">60km</string>
    <string name="info_dificultad">Info dificultad</string>
    <string name="localizacion">Localización</string>
    <string name="aplicar">Aplicar</string>
    <string name="estadisticas_ultimos_usuarios">Estadísticas últimos usuarios</string>
    <string name="empezar_ruta">Empezar Ruta</string>
    <string name="compartir">Compartir</string>
    <string name="privada">PRIVADA</string>
    <string name="publica">PUBLICA</string>
    <string name="faster_who">Faster Who?</string>
    <string name="duracion">Duración</string>
    <string name="title_activity_new_friend">NewFriendActivity</string>

    <!--<string name="default_web_client_id">246650974592-4qiuqa1hn9nrqs38u0n9opgid0rf9ngj.apps.googleusercontent.com</string>-->
</resources>