<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/loadingPanelProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="@id/userName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/imagen_de_usuario" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        app:backgroundTint="@color/black"
        android:text="@string/nombre_de_usuario"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:backgroundTint="@color/black"
        android:text="@string/informacion_del_usuario"
        app:layout_constraintBottom_toBottomOf="@id/userInformationSex"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userName"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/userInformationSex"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:text="@string/sexo"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userName" />

    <TextView
        android:id="@+id/userInformationWeight"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:text="@string/peso"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userInformationSex" />

    <TextView
        android:id="@+id/userInformationHeight"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:text="@string/estatura"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userInformationWeight" />

    <TextView
        android:id="@+id/userInformationDate"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:text="@string/fecha_de_nacimiento"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userInformationHeight" />

    <TextView
        android:id="@+id/userStatistics"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/ultimas_estadisticas"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userInformationHeight" />

    <TextView
        android:id="@+id/userStatisticsDistance"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:drawableLeft="@drawable/ic_baseline_directions_run_24"
        app:drawableTint="@color/blue_800"
        android:ems="10"
        android:gravity="bottom|end"
        android:text="@string/distancia_media"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userStatistics"
        tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/userStatisticsDistanceData"
        android:layout_width="305dp"
        android:layout_height="27dp"
        android:ems="10"
        android:gravity="top|end"
        android:hint="@string/_12_5_km"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userStatisticsDistance" />

    <TextView
        android:id="@+id/userStatisticsActivityLevel"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:drawableLeft="@drawable/ic_bar_chart"
        app:drawableTint="@color/blue_800"
        android:gravity="bottom|end"
        android:text="@string/nivel_de_actividad"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userStatisticsDistance"
        tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/userStatisticsActivityLevelData"
        android:layout_width="305dp"
        android:layout_height="27dp"
        android:ems="10"
        android:textSize="18sp"
        android:gravity="top|end"
        android:hint="@string/activo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userStatisticsActivityLevel" />

    <Button
        android:id="@+id/editarPerfilButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:backgroundTint="@color/white"
        android:text="@string/editar_perfil"
        android:textColor="@color/blue_800"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintLeft_toLeftOf="@id/userName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>