<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginTop="264dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/EditTextContraseña"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextUserName"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="48dp"
        app:backgroundTint="@color/blue_800"
        android:text="@string/entrar_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="456dp"
        app:backgroundTint="@color/blue_800"
        android:text="@string/registrarse_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEntrarGoogle"
        android:layout_width="315dp"
        android:layout_height="53dp"
        android:layout_marginTop="108dp"
        app:backgroundTint="@color/blue_800"
        android:text="@string/entrar_con_google"
        android:drawableLeft="@drawable/ic_icons8_logo_de_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@color/blue_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonEntrarGoogle"
        app:layout_constraintVertical_bias="0.385" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/faster"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/editTextUserName"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="81dp"
        android:contentDescription="@string/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>